# ppsc_old_fork

./: .gitignore  CMakeLists.txt  README.md  configure.sh  start_ppsc.sh
.cache/clangd/index/: access.hpp.83A47955586B7866.idx  allocators.h.11B26FAAC5F5EF17.idx  base64.hpp.F6076A4587A4E08D.idx  base_class.hpp.1EE32238CB324CB9.idx  biginteger.h.C1B51545EABD7345.idx  cereal.hpp.CD30B00F259ACC7E.idx  cntr_types.hpp.349D0BA635CD4FE3.idx  common.hpp.2A22746C41DA214B.idx  common.hpp.A730DB635BD88541.idx  contour_functions.hpp.B83E92024CF0A47F.idx  data_types.hpp.468BE471FF1986FA.idx  diag.hpp.8414D758B158852B.idx  diag_base.hpp.C547F2A8ADC6A8D1.idx  diag_impl.hpp.0B0F381C2EA82444.idx  diyfp.h.367B69176F32B50D.idx  document.h.23B1A65F0E34A48F.idx  dtoa.h.388EB4734AE52CD8.idx  encodedstream.h.660B7D1A298E1DF0.idx  encodings.h.FA46C008B55237A3.idx  error.h.30143B3666047D9E.idx  gf.cpp.FB2A5688E5089193.idx  gf.cpp.FFDDD30C5721E301.idx  gf.hpp.1822F1514780CD06.idx  gf.hpp.5099475C321E7E3A.idx  gf_diag.hpp.263038B2C27CEE22.idx  gf_disp.cpp.256D83D54F445A5B.idx  gf_disp.hpp.4441A4A24AA0785D.idx  gf_mat.hpp.F599024B9A83AA9E.idx  gf_tstp.hpp.E38A697BD5F45957.idx  helpers.hpp.1FAF3AC7CF9843FB.idx  hilbert_space_base.hpp.F2C0AFA8B19BC41B.idx  ieee754.h.2C8CFD113D67456E.idx  integration.hpp.A3350FB4D5D3136B.idx  istreamwrapper.h.9FA0F7EA6D0C81E7.idx  itoa.h.E7AC660C74E58DCA.idx  json.hpp.A1E0348DC6E0C857.idx  macros.hpp.A003CC653CECC9A9.idx  map.hpp.EE7CF74DF018A8DE.idx  memorystream.h.23BDD2E12A336ED4.idx  meta.h.EF7F47732A34DDB0.idx  (+84 more)
examples/single_band_hubbard_bethe/: README.md  calc.py  plot.py
input/: param.in
ppsc/: CMakeLists.txt  cntr_types.hpp  data_types.hpp  diag.hpp  diag_base.hpp  diag_impl.hpp  operator.hpp  ppsc.cpp  ppsc.hpp  range.cpp  range.hpp  serialization.hpp  solver.hpp  solver_lang_firsov.hpp  timer.hpp
ppsc/baths/: non_int_boson_propagator.hpp
ppsc/data_types/: common.hpp  contour_functions.hpp  multi_array_matrix.hpp  test_views.hpp  utils.hpp
ppsc/hamiltonians/: n_channel_siam.hpp  single_band_bose_hubbard.hpp  single_band_extended_hubbard.hpp  single_band_hubbard.hpp  single_band_hubbard_lang_firsov.hpp  single_band_hubbard_sc.hpp  single_band_hubbard_spin.hpp  three_band_hubbard.hpp  three_band_hubbard_solar.hpp  two_band_hubbard.hpp  two_band_hubbard_ising_kanamori.hpp  two_band_hubbard_ising_kanamori_scsusc_dense.hpp  two_band_hubbard_sk.hpp  two_band_hubbard_xas.hpp  two_band_hubbard_xas2.hpp  two_band_tJ.hpp  two_band_tJ_pos.hpp
ppsc/hilbert_spaces/: hilbert_space_base.hpp  n_band_fermi_dense.hpp  n_channel_one_spin.hpp  old_hilbert_spaces.hpp  single_band_bose.hpp  single_band_bose_diag.hpp  single_band_fermi_diag.hpp  single_band_fermi_sc.hpp  single_band_fermi_spin.hpp  single_band_fermi_spin_sc.hpp  single_band_fermi_tJ.hpp  three_band_fermi_densdens.hpp  three_band_fermi_diag.hpp  two_band_fermi_densdens.hpp  two_band_fermi_diag.hpp  two_band_fermi_tJ.hpp  two_band_fermi_tJ_pos.hpp  two_band_fermi_tJ_two.hpp
ppsc/nca/: CMakeLists.txt  gf.cpp  gf.hpp  nca.hpp  sigma.cpp  sigma.hpp
ppsc/oca/: CMakeLists.txt  gf.cpp  gf.hpp  gf_diag.hpp  gf_disp.cpp  gf_disp.hpp  gf_mat.hpp  gf_mat_nop.hpp  gf_tstp.hpp  gf_tstp_nop.hpp  integration.hpp  oca.hpp  sigma.cpp  sigma.hpp  sigma_diag.hpp  sigma_disp.cpp  sigma_disp.hpp  sigma_mat.hpp  sigma_mat_nop.hpp  sigma_tstp.hpp  sigma_tstp_nop.hpp
programs/: CMakeLists.txt  LVO_hetero.cpp  impurity_one_non-int_bathsite.cpp  n_channel_siam.cpp  one_channel_siam_drive.cpp  one_spinful_fermion.cpp  one_spinless_fermion.cpp  one_spinless_fermion_bosonic-bath.cpp  one_spinless_fermion_bosonic-bathTEST.cpp  progress_bar.hpp  single_band_bethe.cpp  single_band_bose_hubbard_bethe.cpp  single_band_hubbard_bethe.cpp  single_band_hubbard_bethe_driven.cpp  single_band_hubbard_bethe_sc.cpp  single_band_hubbard_bethe_spin.cpp  single_band_hubbard_bethe_test_selfe.cpp  single_band_hubbard_bosonbath_bethe.cpp  single_band_hubbard_holstein_MYFILEOLD.cpp  single_band_hubbard_holstein_bethe.cpp  single_band_hubbard_holstein_bethe_lang_firsov.cpp  test_boson_hilbert.cpp  test_dense_hilbert.cpp  test_tJ_hilbert.cpp  test_tJ_twoband_hilbert.cpp  three_band_hubbard_bethe.cpp  three_band_hubbard_bethe_field.cpp  three_band_hubbard_bethe_field_solarcell.cpp  two_band_hubbard_bethe.cpp  two_band_hubbard_bethe_field.cpp  two_band_hubbard_bethe_field_afm.cpp  two_band_hubbard_bethe_field_current_sk.cpp  two_band_hubbard_bethe_field_scsusc_dense.cpp  two_band_tJ_bethe_field_afm.cpp  two_band_tJ_bethe_field_afm_positive.cpp  two_band_tJ_bethe_field_afm_twostates.cpp  xas_two_band_MYFILEOLD.cpp  xas_two_band_atomic.cpp  xas_two_band_corebath-expansion.cpp  xas_two_band_corebath-expansion2.cpp  (+1 more)
programs/LVOheaders/: SpinResolvedFields.hpp  SpinUNResolvedFields.hpp
